Reorganização das pastas + Adicionando workspace com arquivos home, sobre e contato em html

--- a/aula1/exercicio2.html
+++ b/aula1/exercicio2.html
@@ -31,7 +31,7 @@
 
         <hr>
 
-        <img src="nature.jpg" alt="Imagem de uma árvore no meio do mar" width="400px" height="400px"> 
+        <img src="./images/nature.jpg" alt="Imagem de uma árvore no meio do mar" width="400px" height="400px"> 
 
         <blockquote cite="www.globo.com">
             <p>Este testo é da gloobo.com</p>
