--- a/aula2/exercicio1.html
+++ b/aula2/exercicio1.html
@@ -25,7 +25,7 @@
 
         <br><br>
 
-        <label for="">Pergunta Secreta</label>
+        <label for="questions">Pergunta Secreta</label>
         <select name="questions" id="questions">
             <option value="q1">Qual seu animal favorito?</option>
             <option value="q2">Qual seu time de coração?</option>
@@ -46,5 +46,10 @@
 
         <input type="submit" value="Enviar">
     </form>
+    <iframe width="400" height="250" src="https://www.youtube.com/embed/YXy-vcHyusg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <br><br>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d252836.6305374356!2d-35.07430632712772!3d-8.042947494379423!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab196f94e5408b%3A0xe5800ef782bde3a6!2sRecife%2C%20PE!5e0!3m2!1spt-BR!2sbr!4v1645473055650!5m2!1spt-BR!2sbr" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </body>
 </html>
