Adicionando exercicios de flex box

--- a/workspace/contato.html
+++ b/workspace/contato.html
@@ -12,7 +12,6 @@
         <header class="background-header">
             <div class="container-header">
                 <img class="logo" src="./logo.png" alt="Logo da DBC">
-                <!-- <small>Melhores alunos do VemSer de todos os tempos!!</small> -->
                 <nav>
                     <ul class="navbar">
                         <li><a href="home.html">Home</a></li>
@@ -30,10 +29,10 @@
 
                 <div>
                     <label for="nome">Digite seu nome completo:</label> <br>
-                    <input type="text" name="nome" placeholder="Nome Completo"> <br><br>
+                    <input type="text" name="nome" placeholder="Digite seu nome completo"> <br><br>
 
                     <label for="email">Digite seu e-mail:</label> <br>
-                    <input type="text" name="email" placeholder="Nome Completo"><br><br>
+                    <input type="text" name="email" placeholder="Digite seu e-mail"><br><br>
 
                     <label for="motivo-contato">Qual o motivo do seu contato?</label> <br>
                     <select name="motivo-contato" id="motivo-contato">
